--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/statics/styles.css">
-    <link rel="stylesheet" href="/dynamic/dynamic.js">
+    <link rel="stylesheet" href="../statics/styles.css">
+    <link rel="stylesheet" href="../dynamic/dynamic.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -14,7 +14,7 @@
         <!-- Linha para a imagem e o título -->
         <div class="row mb-4">
             <div class="col-md-3 col-12">
-                <img src="/statics/img/Foto editada mamãe.jpg" alt="Imagem" class="img-fluid rounded shadow-lg">
+                <img src="../statics/img/Foto editada mamãe.jpg" alt="Imagem" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-md-9 col-12 align-content-center">
                 <h1 class="text-center text-primary">Claudia Luzia Gonçalvez Cândido Morgado</h1>
@@ -53,14 +53,14 @@
                         <p id="m6" class="hidden">Ei, Cláudia! Feliz aniversário! Desejo muita saúde, alegria e paz na sua vida. Que seu dia seja maravilhoso e que este novo ciclo seja repleto de conquistas, realizações e momentos especiais. Tudo de mais lindo e abençoado para você hoje e sempre. Acho que não vou conseguir te ver hoje, mas sinta-se abraçada e lembrada. Beijão! ❤️</p>
                         <p id="m7" class="hidden">Hoje quem brilha é você! Parabéns sogra, que seu dia seja incrível, assim como você. Feliz aniversário, que Deus te abençoe sempre, você merece tudo de bom, parabéns pela linda família e sou muito grata de poder fazer parte dela.
                             Te desejo tudo de melhor que a vida tem a oferecer, você é muito especial, feliz dia ❤🥂</p>
-                        <video src="/video/Video Maria Clara.mp4" id="m8" height="25%" width="25%"></video>
+                        <video src="../video/Video Maria Clara.mp4" id="m8" height="25%" width="25%"></video>
                     </div>
                 </div>
             </div>
             
         </div>
     </div>
-    <script src="/dynamic/dynamic.js"></script>
+    <script src="../dynamic/dynamic.js"></script>
 </body>
 
 </body>
