--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="../statics/img/Foto editada mamãe.jpg" alt="Imagem" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-md-9 col-12 align-content-center">
-                <h1 class="text-center text-primary">Claudia Luzia Gonçalvez Cândido Morgado</h1>
+                <h1 class="text-center text-primary">Claudia Luzia Gonçalvez Cândido o</h1>
             </div>
         </div>
 
